# jonny-english

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  exe  jonny  jonny.cpp  ma  main  makefile  notes
app/: My_SDL2_App-x86_64.AppImage  make_me_an_app.sh
app/MyAppDir/: myapp.desktop
app/MyAppDir/usr/lib/: libpulse.so.0  libsystemd.so.0
app/MyAppDir/usr/share/applications/: myapp.desktop
app/MyAppDir/usr/share/metainfo/: myapp.appdata.xml
file_dump/: map1.txt  map2.txt  map3.txt
include/glad/: glad.h
player_log/continue/: bots1.txt  bots2.txt  bots3.txt  play1.txt  play2.txt  play3.txt  ses.txt
player_log/replay/: replay.txt  replay1.txt  replay2.txt  replay3.txt
player_log/spawn/: bots1.txt  bots2.txt  bots3.txt  play1.txt  play2.txt  play3.txt
src/: ball.cpp  ball.h  call_game.cpp  call_game.h  clues.cpp  clues.h  files.cpp  files.h  gameover.cpp  gameover.h  gamesave.cpp  gamesave.h  glad.c  globals.cpp  globals.h  history.cpp  history.h  lead.cpp  lead.h  line.h  main.cpp  player.cpp  player.h  replay_m.cpp  replay_m.h  screen.cpp  screen.h  window.cpp  window.h  windowback
zoom/: a.out  gen.cpp  h  k  map1.txt  p  pip.cpp  user_in.cpp
